--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "symfony/twig-pack": "*",
         "symfony/validator": "5.0.*",
         "symfony/web-link": "5.0.*",
+        "symfony/web-server-bundle": "4.4",
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
