--- a/.env
+++ b/.env
@@ -22,6 +22,7 @@ APP_SECRET=a6a3f9b9178a8b5769a4b37053942f16
 
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://dawit120@gmail.com:wubetemaharyy@gmail
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
