--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "symfony/validator": "5.0.*",
         "symfony/web-link": "5.0.*",
         "symfony/web-server-bundle": "4.4",
-        "symfony/yaml": "5.0.*"
+        "symfony/yaml": "5.0.*",
+        "symfonycasts/reset-password-bundle": "^1.5"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
